# Call-Classifier-AI

./: README.md
call-classifier-backend/: Dockerfile  README.md  main.py  middleware.py  models.py  pyproject.toml
call-classifier-backend/routers/: __init__.py  llm.py
call-classifier-backend/test/: test_transcript.md
call-classifier-frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
call-classifier-frontend/src/: App.css  App.jsx
